add_executable(rinex3Nav rinex3Nav.cpp)
target_link_libraries(rinex3Nav gpstk)

add_executable(rinex211GpsWrite rinex211GpsWrite.cpp)
target_link_libraries(rinex211GpsWrite gpstk)

add_executable(rinex211GlonassWrite rinex211GlonassWrite.cpp)
target_link_libraries(rinex211GlonassWrite gpstk)

add_executable(rinex211GlonassWriteCout rinex211GlonassWriteCout.cpp)
target_link_libraries(rinex211GlonassWriteCout gpstk)